openshmemdir = $(pkglibexecdir)/openshmem
openshmem_PROGRAMS = osu_oshm_get osu_oshm_put osu_oshm_put_mr osu_oshm_atomics osu_oshm_barrier osu_oshm_broadcast osu_oshm_fcollect osu_oshm_collect osu_oshm_reduce

osu_oshm_get_SOURCES = osu_oshm_get.c osu_common.c osu_common.h
osu_oshm_put_SOURCES = osu_oshm_put.c osu_common.c osu_common.h
osu_oshm_put_mr_SOURCES = osu_oshm_put_mr.c osu_common.c osu_common.h
osu_oshm_atomics_SOURCES = osu_oshm_atomics.c osu_common.c osu_common.h
osu_oshm_barrier_SOURCES = osu_oshm_barrier.c osu_common.c osu_common.h osu_coll.h
osu_oshm_broadcast_SOURCES = osu_oshm_broadcast.c osu_common.c osu_common.h osu_coll.h
osu_oshm_collect_SOURCES = osu_oshm_collect.c osu_common.c osu_common.h osu_coll.h
osu_oshm_fcollect_SOURCES = osu_oshm_fcollect.c osu_common.c osu_common.h osu_coll.h
osu_oshm_reduce_SOURCES = osu_oshm_reduce.c osu_common.c osu_common.h osu_coll.h

