upcdir = $(pkglibexecdir)/upc
upc_PROGRAMS = osu_upc_memget osu_upc_memput osu_upc_all_barrier \
	       osu_upc_all_broadcast osu_upc_all_exchange \
	       osu_upc_all_gather_all osu_upc_all_gather osu_upc_all_reduce \
	       osu_upc_all_scatter

osu_upc_all_barrier_SOURCES = osu_upc_all_barrier.c osu_common.c osu_common.h osu_coll.h
osu_upc_all_broadcast_SOURCES = osu_upc_all_broadcast.c osu_common.c osu_common.h osu_coll.h
osu_upc_all_exchange_SOURCES = osu_upc_all_exchange.c osu_common.c osu_common.h osu_coll.h
osu_upc_all_gather_SOURCES = osu_upc_all_gather.c osu_common.c osu_common.h osu_coll.h
osu_upc_all_gather_all_SOURCES = osu_upc_all_gather_all.c osu_common.c osu_common.h osu_coll.h
osu_upc_all_reduce_SOURCES = osu_upc_all_reduce.c osu_common.c osu_common.h osu_coll.h
osu_upc_all_scatter_SOURCES = osu_upc_all_scatter.c osu_common.c osu_common.h osu_coll.h
