upcdir = $(pkglibexecdir)/upcxx
upc_PROGRAMS = osu_upcxx_allgather osu_upcxx_alltoall osu_upcxx_bcast \
	       osu_upcxx_gather osu_upcxx_reduce osu_upcxx_scatter \
	       osu_upcxx_async_copy_get osu_upcxx_async_copy_put

osu_upcxx_allgather_SOURCES = osu_upcxx_allgather.cpp osu_coll.h \
			      osu_common.c osu_common.h
osu_upcxx_alltoall_SOURCES = osu_upcxx_alltoall.cpp osu_coll.h \
			     osu_common.c osu_common.h
osu_upcxx_bcast_SOURCES = osu_upcxx_bcast.cpp osu_coll.h \
			  osu_common.c osu_common.h
osu_upcxx_gather_SOURCES = osu_upcxx_gather.cpp osu_coll.h \
			   osu_common.c osu_common.h
osu_upcxx_reduce_SOURCES = osu_upcxx_reduce.cpp osu_coll.h \
			   osu_common.c osu_common.h
osu_upcxx_scatter_SOURCES = osu_upcxx_scatter.cpp osu_coll.h \
			    osu_common.c osu_common.h
osu_upcxx_async_copy_get_SOURCES = osu_upcxx_async_copy_get.cpp \
				   osu_common.c osu_common.h
osu_upcxx_async_copy_put_SOURCES = osu_upcxx_async_copy_put.cpp \
				   osu_common.c osu_common.h
